--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "dependencies": {
     "rfs": "^7.1.1",
-    "three": "^0.94.0"
+    "three": "^0.94.0",
+    "three-orbit-controls": "^82.1.0"
   }
 }
